--- a/play.html
+++ b/play.html
@@ -4,6 +4,7 @@
         <title>David In - PLAY</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link href="style.css" rel="stylesheet" type="text/css" />
+        <link rel="icon" type=".ico" href="favicon.ico">
     </head>
     <body>
         <div id = "header">
