--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>David In - WORK</title>
-        <meta name="viewport" content="width=device-width,initial scale=1">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link href="style.css" rel="stylesheet" type="text/css" />
         <link rel="icon" type=".ico" href="favicon.ico">
@@ -23,7 +23,7 @@
                 <li><a href="index.html" class ="current">WORK</a></li>
             </ul>
         </div> <!--End of Navigation Div-->
-        
+
         <div id = "body">
             <div class = "media media-flip">
                 <div class = "img">
