--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>David In</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div id = "header">
+            <div id = "title">
+                David In
+            </div>
+        </div> <!-- End of Header Div-->
+        <div id = "navigation">
+            <ul class = "navbar">
+                <li><a href="index.html">WORK</a></li>
+                <li><a href="play.html">JOURNAL</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+            </ul>
+        </div> <!--End of Navigation Div-->
+        
+        <div id = "body">
+        </div> <!--End of Body Div-->
+    </body>
+\</html>
