updating on v2, added about, working on journal page

--- a/about.html
+++ b/about.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>David In - ABOUT</title>
+        <title>David In</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div id = "header">
-            <div id = "title">
-                <h1>David In</h1>
-            </div>
-            <div id = "description">
-                <h2>software engineer</h2>
+            <div id = "title" class = "vertical-container">
+                <a href="index.html">
+                    David In
+                </a>
             </div>
         </div> <!-- End of Header Div-->
         <div id = "navigation">
-            <ul class = "navbar">
-                <li><a href="about.html" class="current">ABOUT</a></li>
-                <li><a href="play.html">PLAY</a></li>
-                <li><a href="index.html">WORK</a></li>
-            </ul>
+            <ul class = "nav">
+                <li class = "link"><a href="work.html">WORK</a></li>
+                <li class = "link"><a href="journal.html">JOURNAL</a></li>
+                <li class = "bold"><a href="about.html">ABOUT</a></li>
+            </ul>   
         </div> <!--End of Navigation Div-->
-        
-        <div id = "body">
-            <div id="tagline">
-                <h2>“open your eyes and see what you can do with them before they close forever”</h2>
-            </div>
-            <div id="bio">
-                <p>I am an experience and brand designer, a photographer, and a writer. I am currently a sophomore at Cornell University studying UX design and Comparative Literature with a minor in business.</p>
-                <p>Standing at the intersection of design and humanities, I am passionate about applying literary and cultural theories to build technology that maximizes the experience of “being human”.</p>
-                <p>I am constantly searching for better ways to inspire others through design thinking and through interdisciplinary collaboration. I believe in the magic of creation--its universality, its inclusiveness, and its power to ignite passion. I look forward to creating human-centered social enterprise and developing a holistic perspective on designing for a change.</p>
-                <p>Companies I have worked with includes: IDEO Colab, Adobe, Bloomberg Businessweek, Cornell Daily Sun, Getty Images, Huffington Post and etc.  For work inquiries or coffee chat, reach me at mh2235@cornell.edu.</p>
-            </div>
-            <div id="portrait">
-                <img src="bio/me.jpg" alt="A picture of me">
-        </div> <!--End of Body Div-->
+        <div id = "bio">
+            <p class = "text">
+                I am currently a sophomore at Johns Hopkins University studying computer science.
+                <br/><br/>
+                I am passionate about creating software that empowers and inspires people. I believe that behind great software is a well told story that captivates people’s hearts. I enjoy designing seamless user experiences that make people happy. I love being inspired by art, especially by minimalism. I am always looking to learn from those who are more experienced and to teach to those who are less experienced.
+                <br/><br/>
+                My current interests are in the blockchain, UI/UX design, web development, and game development. I love collaborating with strangers, so if you are interested in working together, please contact me.
+                <br/><br/>
+                I also love photography, music, people, and jesus.
+            </p>
+            <img class="me" src="me.jpg" alt="a picture of me"/>
+        </div>
     </body>
 </html>
