--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>David In</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="frontPage.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div id = "header">
@@ -12,14 +12,11 @@
             </div>
         </div> <!-- End of Header Div-->
         <div id = "navigation">
-            <ul class = "navbar">
-                <li><a href="index.html">WORK</a></li>
-                <li><a href="play.html">JOURNAL</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+            <ul class = "nav">
+                <li class = "work"><a href="work.html">WORK</a></li>
+                <li class = "journal"><a href="journal.html">JOURNAL</a></li>
+                <li class = "about"><a href="about.html">ABOUT</a></li>
             </ul>
         </div> <!--End of Navigation Div-->
-        
-        <div id = "body">
-        </div> <!--End of Body Div-->
     </body>
-\</html>
+</html>
