added journal page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 <br/><br/>
                 I am passionate about creating software that empowers and inspires people. I believe that behind great software is a well told story that captivates people’s hearts. I enjoy designing seamless user experiences that make people happy. I love being inspired by art, especially by minimalism. I am always looking to learn from those who are more experienced and to teach to those who are less experienced.
                 <br/><br/>
-                My current interests are in the blockchain, UI/UX design, web development, and game development. I love collaborating with strangers, so if you are interested in working together, please contact me.
+                My current interests are in the blockchain, UI/UX design, web development, and game development. I love collaborating with strangers, so if you are interested in working together, please contact <a href="mailto:david94539@gmail.com">me</a>.
                 <br/><br/>
                 I also love photography, music, people, and jesus.
             </p>
