--- a/journal.html
+++ b/journal.html
@@ -20,10 +20,16 @@
                 <li class = "link"><a href="about.html">ABOUT</a></li>
             </ul>
         </div> <!--End of Navigation Div-->
+        <div id="overlay">
+            <div id="titleOne">ㅇ</div>
+            <div id="titleTwo">ㅅ</div>
+            <div id="titleThree">ㅎ</div>
+        </div>
         <div id = "gallery">
-            <img src = "journal/bridge.jpg" alt = "bridge" />
-            <img src = "journal/children.jpg" alt = "bridge" />
-            <img src = "journal/shrine.jpg" alt = "bridge" />
-            <img src = "journal/halmulni.jpg" alt = "bridge" />
+            <img class="one" src="journal/bridge.jpg" alt="bridge" />
+            <img class="two" src = "journal/children.jpg" alt = "children" />
+            <img class="three" src = "journal/shrine.jpg" alt = "shrine" />
+            <img class="four" src = "journal/halmulni.jpg" alt = "grandmother" />
+        </div>
     </body>
 </html>
