--- a/work.html
+++ b/work.html
@@ -20,5 +20,19 @@
                 <li class = "link"><a href="about.html">ABOUT</a></li>
             </ul>
         </div> <!--End of Navigation Div-->
+        <div id="works">
+            <div class="box">
+                <a href="vi.html">
+                    <h2>Redesigning Vision Interchange</h2>
+                    <img class="workvisual" src="work/vi.png" height=226px  alt="vision interchange web screenshot"/>
+                </a>
+            </div>
+            <div class="box">
+                <a href="personalwebsite.html">
+                    <h2 href="personalwebsite.html">Designing my personal website</h2>
+                    <img class="workvisual" src="work/website.png" height=240px  alt="personal website"/>
+                </a>
+            </div>
+        </div>
     </body>
 </html>
