added work page and centered everything (basically finished)

--- a/work.html
+++ b/work.html
@@ -24,13 +24,13 @@
             <div class="box">
                 <a href="vi.html">
                     <h2>Redesigning Vision Interchange</h2>
-                    <img class="workvisual" src="work/vi.png" height=226px  alt="vision interchange web screenshot"/>
+                    <img class="workvisual" src="work/vilogo.png" height=226px  alt="vision interchange web screenshot"/>
                 </a>
             </div>
             <div class="box">
                 <a href="personalwebsite.html">
                     <h2 href="personalwebsite.html">Designing my personal website</h2>
-                    <img class="workvisual" src="work/website.png" height=240px  alt="personal website"/>
+                    <img class="workvisual" src="work/website.png" height=226px  alt="personal website"/>
                 </a>
             </div>
         </div>
