--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 <br/><br/>
                 My current interests are in the blockchain, UI/UX design, web development, and game development. I love collaborating with strangers, so if you are interested in working together, please contact <a href="mailto:david94539@gmail.com">me</a>.
                 <br/><br/>
-                I also love photography, music, people, and jesus.
+                I also love photography and music.
             </p>
             <img class="me" src="me.jpg" alt="a picture of me"/>
         </div>
