--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
                 <br/><br/>
                 My current interests are in the blockchain, UI/UX design, web development, and game development. I love collaborating with strangers, so if you are interested in working together, please contact <a href="mailto:david94539@gmail.com">me</a>.
                 <br/><br/>
-                I also love photography and music.
+                Photography and music are what make me human, so please feel free to hit me up if you're down to shoot. 
+                <br/><br/>
+                Here is my <a href="resume.html">resume</a> enclosed.
             </p>
             <img class="me" src="me.jpg" alt="a picture of me"/>
         </div>
