Change link to google drive resume

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </a></li>
       <li><a target="_blank" href="https://github.com/indavid">
         <span class="fab fa-github" aria-hidden="true"></span> <span class="sr-only">Github</span>
-      <li><a class="button" target="_blank" href="https://drive.google.com/file/d/1fyyoQzh3VvrviYu5ugkS25UfzrYiM8VO/view?usp=sharing">Resume</a></li>
+      <li><a class="button" target="_blank" href="https://drive.google.com/file/d/1VwpXIMCN6ScI1J4em5MU5Lx08Sq8QKUN/view?usp=sharing">Resume</a></li>
     </ul>
   </nav>
 
@@ -35,7 +35,7 @@
 
     <h2>I develop the front end of websites.</h2>
     
-    <p>I'm an aspiring front end developer specializing in HTML, CSS, JS, and React.</p>
+    <p>I'm a front end developer specializing in React, JS, HTML, and CSS.</p>
 
     <p>Currently, I'm making a career switch from program management at a <a target="_blank" href="http://www.sparklabs.co.kr/sp/">Korean
     startup accelerator</a> to front end development positions.</p>
@@ -49,9 +49,9 @@
         <div class="text">
           <h4>Latest Project</h4>
           <h3>Wordle in Korean</h3>
-          <p>Description of the Project. Players have five chances to guess the five letter word of day. This <a target="_blank" href="https://indavid.github.io/wordle-clone/"> small game </a> was the final project of 
-            Brian Holt's Intro to Web Dev Course in <a target="_blank" href="https://frontendmasters.com/">Front End Masters</a>. Planning to add a Korean twist to the game and
-            more animation. Credits to Josh Wardle, the original creator.
+          <p>Description of the Project. Players have 6 chances to guess the 5-letter word of day. This <a target="_blank" href="https://indavid.github.io/wordle-clone/"> small game </a> 
+            was built as a clone to Josh Wardle's original game, Wordle, for learning purposes. In the process of making the game taking in guesses in the Korean language
+            instead of the English language.
           </p>
           <h4>Technologies used:</h4>
           <ul>
@@ -91,7 +91,7 @@
     <div class="bg-plum">
       <section id="contact">
         <h2>Contact me</h2>
-        <p>I am currently looking for Entry-level or Junior Front End Developer positions. 
+        <p>I am currently looking for Front End Developer positions. 
           If you think I'd be a great fit for a position you know, please shoot me an email.
         </p>
         <a class="button" target="_blank" href="mailto:david94539@gmail.com">
