Fix resume link and prettier format documents and change image

--- a/index.html
+++ b/index.html
@@ -1,121 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>David In</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a461fd0eba.js" crossorigin="anonymous"></script>
-  <link href="styles.css" rel="stylesheet" />
-</head>
-<body>
-  <nav>
-    <ul>
-      <li><h1><a href="index.html">
-        <span class="fa-solid fa-code" aria-hidden="true"></span>
-        <span>David In</span>
-      </a></h1></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a target="_blank" href="https://www.linkedin.com/in/david-in/">  
-        <span class="fab fa-linkedin" aria-hidden="true"></span> <span class="sr-only">LinkedIn</span>
-      </a></li>
-      <li><a target="_blank" href="https://github.com/indavid">
-        <span class="fab fa-github" aria-hidden="true"></span> <span class="sr-only">Github</span>
-      <li><a class="button" target="_blank" href="https://drive.google.com/file/d/1VwpXIMCN6ScI1J4em5MU5Lx08Sq8QKUN/view?usp=sharing">Resume</a></li>
-    </ul>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>David In</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/a461fd0eba.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li>
+          <h1>
+            <a href="index.html">
+              <span class="fa-solid fa-code" aria-hidden="true"></span>
+              <span>David In</span>
+            </a>
+          </h1>
+        </li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li>
+          <a target="_blank" href="https://www.linkedin.com/in/david-in/">
+            <span class="fab fa-linkedin" aria-hidden="true"></span>
+            <span class="sr-only">LinkedIn</span>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/indavid">
+            <span class="fab fa-github" aria-hidden="true"></span>
+            <span class="sr-only">Github</span>
+          </a>
+        </li>
+        <li>
+          <a
+            class="button"
+            target="_blank"
+            href="https://drive.google.com/file/d/1VwpXIMCN6ScI1J4em5MU5Lx08Sq8QKUN/view?usp=sharing"
+            >Resume</a
+          >
+        </li>
+      </ul>
+    </nav>
 
-  <section id="intro">
-    <p class="name">Hi, my name is <span>David In.</span></p>
+    <section id="intro">
+      <p class="name">Hi, my name is <span>David In.</span></p>
 
-    <h2>I develop the front end of websites.</h2>
-    
-    <p>I'm a front end developer specializing in React, JS, HTML, and CSS.</p>
+      <h2>I develop the front end of websites.</h2>
 
-    <p>Currently, I'm making a career switch from program management at a <a target="_blank" href="http://www.sparklabs.co.kr/sp/">Korean
-    startup accelerator</a> to front end development positions.</p>
-  </section>
+      <p>I'm a front end developer specializing in React, JS, HTML, and CSS.</p>
 
-  <div class="gradient"></div>
-  <div class='bg-dkblue'>
-    <section id="projects">
-      <h2>Projects I'm Proud Of</h2>
-      <article>
-        <div class="text">
-          <h4>Latest Project</h4>
-          <h3>Wordle in Korean</h3>
-          <p>Description of the Project. Players have 6 chances to guess the 5-letter word of day. This <a target="_blank" href="https://indavid.github.io/wordle-clone/"> small game </a> 
-            was built as a clone to Josh Wardle's original game, Wordle, for learning purposes. In the process of making the game taking in guesses in the Korean language
-            instead of the English language.
-          </p>
-          <h4>Technologies used:</h4>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JS</li>
-          </ul>
-        </div>
-        <img src="./img/wordle.png" alt="Screenshot of my Wordle website" />
-      </article>
-      <article class="alternate">
-        <div class="text">
-          <h4>NFT Web3 dApp Project</h4>
-          <h3>Raving Goblins Website</h3>
-          <p>Description of the Project. Developed the React web prototype based off of the ERC-721 smart contract 
-            containing a collection of 10,443 mint-able Raving Goblins NFTs - digital collectibles focused on EDM music culture. 
-            Worked with a team of an art gallery curator, a music label executive, a designer, developers, and 
-            managers. Later developed into and released as <a target="_blank" href="https://ravinggoblins.club/">a production app</a>
-            using Klaytn.
-          </p>
-          <h4>Technologies used:</h4>
-          <ul>
-            <li>React</li>
-            <li>Ant Design</li>
-            <li>Hardhat</li>
-            <li>Solidity</li>
-            <li>Go</li>
-            <li>AWS</li>
-            <li>Heroku</li>
-          </ul>
-        </div>
-        <img src="./img/rg.png" alt="Screenshot of current Raving Goblins website" />
-      </article>
+      <p>
+        Currently, I'm making a career switch from program management at a
+        <a target="_blank" href="http://www.sparklabs.co.kr/sp/"
+          >Korean startup accelerator</a
+        >
+        to front end development positions.
+      </p>
+    </section>
+
+    <div class="gradient"></div>
+    <div class="bg-dkblue">
+      <section id="projects">
+        <h2>Projects I'm Proud Of</h2>
+        <article>
+          <div class="text">
+            <h4>Latest Project</h4>
+            <h3>Wordle in Korean</h3>
+            <p>
+              Description of the Project. Players have 6 chances to guess the
+              5-letter word of day. This
+              <a target="_blank" href="https://indavid.github.io/wordle-clone/">
+                small game
+              </a>
+              was built as a clone to Josh Wardle's original game, Wordle, for
+              learning more about native JS and the Model-View-Controller (MVC)
+              design pattern. I also customized the game so that guesses would
+              be in Korean instead of English.
+            </p>
+            <h4>Technologies used:</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JS</li>
+            </ul>
+          </div>
+          <img src="./img/wordle.png" alt="Screenshot of my Wordle website" />
+        </article>
+        <article class="alternate">
+          <div class="text">
+            <h4>NFT Web3 dApp Project</h4>
+            <h3>Raving Goblins Website</h3>
+            <p>
+              Description of the Project. Developed the React web prototype
+              based off of the ERC-721 smart contract containing a collection of
+              10,443 mint-able Raving Goblins NFTs - digital collectibles
+              focused on EDM music culture. Worked with a team of an art gallery
+              curator, a music label executive, a designer, developers, and
+              managers. Later developed into and released as
+              <a target="_blank" href="https://ravinggoblins.club/"
+                >a production app</a
+              >
+              using Klaytn.
+            </p>
+            <h4>Technologies used:</h4>
+            <ul>
+              <li>React</li>
+              <li>Ant Design</li>
+              <li>Hardhat</li>
+              <li>Solidity</li>
+              <li>Go</li>
+              <li>AWS</li>
+              <li>Heroku</li>
+            </ul>
+          </div>
+          <img
+            src="./img/rg.png"
+            alt="Screenshot of current Raving Goblins website"
+          />
+        </article>
       </section>
     </div>
     <div class="gradient"></div>
     <div class="bg-plum">
       <section id="contact">
         <h2>Contact me</h2>
-        <p>I am currently looking for Front End Developer positions. 
-          If you think I'd be a great fit for a position you know, please shoot me an email.
+        <p>
+          I am currently looking for Front End Developer positions. If you think
+          I'd be a great fit for a position you know, please shoot me an email.
         </p>
         <a class="button" target="_blank" href="mailto:david94539@gmail.com">
           Email me
         </a>
       </section>
-  </div>
-  
-  <div class="gradient"></div>
-  <footer>
-    <h2>David In &middot; Front End Developer</h2>
-    <ul class="social">
-      <li><a target="_blank" href="https://www.linkedin.com/in/david-in/">  
-        <span class="fab fa-linkedin" aria-hidden="true"></span> <span class="sr-only">LinkedIn</span>
-      </a></li>
-      <li><a target="_blank" href="https://github.com/indavid">
-        <span class="fab fa-github" aria-hidden="true"></span> <span class="sr-only">Github</span>
-      </a></li>
-      <li><a target="_blank" href="mailto:david94539@gmail.com">
-        <span class="fa-solid fa-envelope" aria-hidden="true"></span> <span class="sr-only">Email</span>
-      </a></li>
-    </ul>
-    <p>&copy 2023 David In. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+    </div>
 
+    <div class="gradient"></div>
+    <footer>
+      <h2>David In &middot; Front End Developer</h2>
+      <ul class="social">
+        <li>
+          <a target="_blank" href="https://www.linkedin.com/in/david-in/">
+            <span class="fab fa-linkedin" aria-hidden="true"></span>
+            <span class="sr-only">LinkedIn</span>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/indavid">
+            <span class="fab fa-github" aria-hidden="true"></span>
+            <span class="sr-only">Github</span>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="mailto:david94539@gmail.com">
+            <span class="fa-solid fa-envelope" aria-hidden="true"></span>
+            <span class="sr-only">Email</span>
+          </a>
+        </li>
+      </ul>
+      <p>&copy 2023 David In. All rights reserved.</p>
+    </footer>
+  </body>
+</html>
