--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
             <p>
               Description of the Project. Players have 6 chances to guess the
               5-letter word of day. This
-              <a target="_blank" href="https://indavid.github.io/wordle-clone/">
+              <a
+                target="_blank"
+                href="https://indavid.github.io/korean-wordle/"
+              >
                 small game
               </a>
               was built as a clone to Josh Wardle's original game, Wordle, for
