made some content edits

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a
             class="button"
             target="_blank"
-            href="https://drive.google.com/file/d/1VwpXIMCN6ScI1J4em5MU5Lx08Sq8QKUN/view?usp=sharing"
+            href="https://drive.google.com/file/d/1P8dE0QNGSlGMkrcJCSYO_L8MPdNMFI92/view?usp=sharing"
             >Resume</a
           >
         </li>
@@ -57,16 +57,16 @@
     <section id="intro">
       <p class="name">Hi, my name is <span>David In.</span></p>
 
-      <h2>I develop the front end of websites.</h2>
-
-      <p>I'm a front end developer specializing in React, JS, HTML, and CSS.</p>
+      <h2>I develop all kinds of websites.</h2>
 
       <p>
-        Currently, I'm making a career switch from program management at a
-        <a target="_blank" href="http://www.sparklabs.co.kr/sp/"
-          >Korean startup accelerator</a
-        >
-        to front end development positions.
+        My technical skills include React, Angular, Javascript, Express, and
+        Mongo.DB.
+      </p>
+
+      <p>
+        I am a full stack software engineer with over 3 years of experience and
+        have worked on a variety of different web development projects.
       </p>
     </section>
 
@@ -140,8 +140,9 @@
       <section id="contact">
         <h2>Contact me</h2>
         <p>
-          I am currently looking for Front End Developer positions. If you think
-          I'd be a great fit for a position you know, please shoot me an email.
+          I am currently looking for Front End or Full Stack Developer/Software
+          Engineer positions. If you think I'd be a great fit for a position you
+          know, please shoot me an email.
         </p>
         <a class="button" target="_blank" href="mailto:david94539@gmail.com">
           Email me
