--- a/about.html
+++ b/about.html
@@ -62,23 +62,22 @@
           <div class="text">
             <h3>Biography</h3>
             <p>
-              I'm a Front-End Developer based in Irvine, California. Graduated
-              with a Bachelors in Computer Science from Johns Hopkins in 2020
-              and worked with small seed-stage startups and interned at Booz
-              Allen Hamilton as a front-end developer. After I graduated, I
-              worked as a program manager in a startup accelerator in Seoul,
-              South Korea for a year. Briefly worked on Raving Goblins with
-              Every Single Moment, an Entertainment Tech Startup dealing with
-              the NFT space. Now I'm currently looking for full-time work as a
-              front end developer. On my off time, I enjoy taking photos,
-              listening to music, and watching movies.
+              Hello! I'm David In and am a full-time Front-End/Full-Stack
+              Software Engineer. Graduated with a Bachelors in Computer Science
+              from Johns Hopkins in 2020 and interned at Booz Allen Hamilton as
+              a full-stack software engineer. After I graduated, I worked as a
+              product developer in Korea's oldest and biggest startup
+              accelerator in Seoul. Now I'm currently working in an IT
+              consulting firm as a contractor for client projects. On my off
+              time, I enjoy taking photos, listening to music, and watching
+              movies.
             </p>
             <h4>My favorite technologies include:</h4>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JS</li>
               <li>React</li>
+              <li>Material UI</li>
+              <li>Next.js</li>
+              <li>SCSS</li>
             </ul>
           </div>
           <img src="./img/personal.jpg" alt="Picture of David In" />
@@ -88,7 +87,7 @@
 
     <div class="gradient"></div>
     <footer>
-      <h2>David In &middot; Front End Developer</h2>
+      <h2>David In &middot; Full Stack Software Engineer</h2>
       <ul class="social">
         <li>
           <a target="_blank" href="https://www.linkedin.com/in/david-in/">
