--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a
             class="button"
             target="_blank"
-            href="https://drive.google.com/file/d/1P8dE0QNGSlGMkrcJCSYO_L8MPdNMFI92/view?usp=sharing"
+            href="https://drive.google.com/file/d/16rzqbOyKfAucFz5tZJ7oW6R7JUahioPO/view?usp=sharing"
             >Resume</a
           >
         </li>
@@ -74,9 +74,32 @@
     <div class="bg-dkblue">
       <section id="projects">
         <h2>Projects I'm Proud Of</h2>
-        <article>
+        <article class="alternate">
           <div class="text">
             <h4>Latest Project</h4>
+            <h3>Pokedex in Angular</h3>
+            <p>
+              Description of the Project. The
+              <a href="https://friendly-melomakarona-8f314f.netlify.app/"
+                >Pokedex Angular App</a
+              >
+              is a web application built using the Angular framework. It serves
+              as a digital encyclopedia for Pokemon, allowing users to explore
+              and discover information about different Pokemon species.
+            </p>
+            <h4>Technologies used:</h4>
+            <ul>
+              <li>Angular</li>
+              <li>PrimeNG</li>
+              <li>SCSS</li>
+              <li>Netlify</li>
+            </ul>
+          </div>
+          <img src="./img/pokedex.png" alt="Screenshot of my Pokedex Site" />
+        </article>
+        <article>
+          <div class="text">
+            <h4>Javascript Word Game</h4>
             <h3>Wordle in Korean</h3>
             <p>
               Description of the Project. Players have 6 chances to guess the
@@ -140,9 +163,9 @@
       <section id="contact">
         <h2>Contact me</h2>
         <p>
-          I am currently looking for Front End or Full Stack Developer/Software
-          Engineer positions. If you think I'd be a great fit for a position you
-          know, please shoot me an email.
+          Am open to Front End or Full Stack Developer/Software Engineer
+          positions. If you think I'd be a great fit for a position you know,
+          please shoot me an email or contact me on LinkedIn.
         </p>
         <a class="button" target="_blank" href="mailto:david94539@gmail.com">
           Email me
@@ -152,7 +175,7 @@
 
     <div class="gradient"></div>
     <footer>
-      <h2>David In &middot; Front End Developer</h2>
+      <h2>David In &middot; Full Stack Software Engineer</h2>
       <ul class="social">
         <li>
           <a target="_blank" href="https://www.linkedin.com/in/david-in/">
